# CSE582_Carbon_Calculator

./: README.md  carbon_accountant.py  component_carbon_data.csv  data_loader.py  example_usage.yaml  gpu_computation.py  main.py  pyproject.toml  system_components.py  test.py  visualize.py  workload_process.py
